# fpp

./: .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Definitions-and-Uses.adoc  Evaluation.adoc  Expressions.adoc  Introduction.adoc  Lexical-Elements.adoc  NOTICE.txt  README.adoc  README.md  Scoping-of-Names.adoc  Types.adoc  all.do  check.do  clean.do  defs.sh  fpp-spec.adoc  fpp-spec.adoc.do  fpp-spec.html.do  fpp.cpp  pyproject.toml  setup.py  tags.awk  version.sh
.github/workflows/: build-native.yml  build-test.yml  env-setup  native-build.yml  odroid-keepalive.yml  publish  scala.yml
Definitions/: Array-Definitions.adoc  Introduction.adoc  Namespace-Definitions.adoc  Struct-Definitions.adoc  clean.do  defs.sh
Detailed-Description/: Detailed-Description.adoc.do  Expressions.adoc  Identifiers.adoc  Lexical-Elements.adoc  Translation-Units-and-Programs.adoc  Types.adoc
Detailed-Description/Definitions/: Enum-Definitions.adoc  Enumerated-Constant-Definitions.adoc  Module-Definitions.adoc  Parameter-Lists.adoc  State-Data-Definitions.adoc  Task-Network-Bodies.adoc  Timeline-Definitions.adoc  spell.do
compiler/: .gitignore  .jvmopts  Notes  README.adoc  build.sbt  clean  fpp-sbt  install  install-native  install-trace  release  test  tools.txt  trace-fprime
docs/: README.adoc  all.do  clean.do  default.tar.do  default.zip.do  fpp-spec.do  fpp-spec.html  fpp-users-guide.html  index.html  refresh.do
fprime_fpp/: fprime_fpp_install.py
sml/: README.adoc  all.do  bin.do  clean.do  default.do  defs.sh  test.fpp
spec/: Analysis-and-Translation.adoc  Comments-and-Annotations.adoc  Definitions-and-Uses.adoc  Element-Sequences.adoc  Evaluation.adoc  Expressions.adoc  Lexical-Elements.adoc  Location-Specifiers.adoc  Parameters.adoc  Scoping-of-Names.adoc  Syntax-Notation.adoc  Translation-Units-and-Models.adoc  Translation-Units-and-Programs.adoc  Translation.adoc  Type-Checking.adoc  Type-Names.adoc  Types.adoc  Values.adoc  all.do  check-tags.do  clean.do  defined-tags.txt.do  defs.sh  fpp-spec.adoc.do  fpp-spec.html.do
(+5629 files in other folders)
